--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vuetify 3 Vite Preview</title>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" href="/favicon.ico" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vuetify 3 Vite Preview</title>
   <script type="module" crossorigin src="./assets/index.7974c44c.js"></script>
   <link rel="stylesheet" href="./assets/index.3a8b8889.css">
 </head>
 
 <body>
-    <div id="app"></div>
-    
+  <div id="app"></div>
+
 </body>
 
 </html>
